Fix alignment of ordered lists

--- a/app/assets/stylesheets/elements/_items.scss
+++ b/app/assets/stylesheets/elements/_items.scss
@@ -287,6 +287,8 @@
     padding-left: 2rem;
 
     li {
+      display: flex;
+      align-items: flex-start;
       counter-increment: ordered-list;
 
       &::before {
